# aoc-2024

./: .gitignore  Cargo.toml  go.mod  rustfmt.toml
go/01/: main.go  main_test.go
go/02/: main.go  main_test.go
go/03/: main.go  main_test.go
go/04/: main.go  main_test.go
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/: 01.kt  test.ws.kts
kotlin/src/main/kotlin/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day20.kt  Day21.kt  Utils.kt
kotlin/src/main/kotlin/utils/: Playground.kt
kotlin/src/test/kotlin/: Day01Test.kt  Day02Test.kt  Day03Test.kt  Day04Test.kt  Day05Test.kt  Day06Test.kt  Day07Test.kt  Day08Test.kt  Day09Test.kt  Day10Test.kt  Day11Test.kt  Day12Test.kt  Day13Test.kt  Day14Test.kt  Day15Test.kt  Day16Test.kt  Day17Test.kt  Day18Test.kt  Day19Test.kt  Day20Test.kt  Day21Test.kt
src/: lib.rs
