[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
fnv = "1.0.7"
hashbrown = "0.15.2"
itertools = "0.13.0"
nom = "7.1.3"
priority-queue = "2.1.1"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
lto = true
debug = false
opt-level = 3

[profile.test]
lto = false
opt-level = 1

[profile.dev]
lto = false
debug = true
opt-level = 3
